# motion_toolkit

./: .gitignore  CLAUDE.md  LICENSE  README.md  drive.py  drive_warp.py  eval_phase1.py  mppi.py  pyproject.toml  rollout.py  state.py  twist.py  viz_occlusion.py
.github/workflows/: docs.yml
_terrain/: CLAUDE.md  pyproject.toml
_terrain/docs/: index.md  performance.md  pipeline.md
_terrain/ros/: inspect_cloud.py
_terrain/scripts/: demo_dynamic_filter.py  demo_lidar.py  drive_lidar.py
benchmarks/: _common.py  control.py  differentiable.py  forward.py  planning.py  rollout.py
demos/: costfield.py  ekf_tuning.py  eval.py  export_worlds.py  navigate_goalbrake.py  navigate_partial.py  navigate_partial_view.py  pipeline_ekf.py  pipeline_inspect.py  pipeline_sim.py
docs/: heightmap.md  helhest_state_model.md  numpy_VS_warp.md  old_vs_ekf_localization.md  outlier.md  state_model_proper.md  traversability.md  turn_differential_hotfix.md
kinematic_helhest/: data.py  drive.py  drive_warp.py  driver.py  dynamics.py  eval.py  follow.py  friction.py  heightmap.py  model.py  mppi.py  navigate_partial.py  placement.py  worlds.py
kinematic_helhest/control/: mppi.py
kinematic_helhest/engine/: __init__.py  robot.py  simulator.py  step.py  terrain.py
kinematic_helhest/perception/: rasterize.py
kinematic_helhest/planning/: costtogo.py  costtogo_settle.py  lattice_solver.py  mppi.py  mppi_gpu.py  navigate.py  terminal.py  verify_device.py
kinematic_helhest/reference/: __init__.py  eval_phase1.py  eval_phase2.py  eval_phase3.py  eval_phase4.py  rollout.py  state.py  turning.py  twist.py
kinematic_helhest/viz/: costfield.py  drive.py  follow.py  navigate_live.py  navigate_partial_view.py  render.py  robust_live.py
kinematic_helhest/warp_engine/: envelope.py  kinematics.py  solver.py  terrain.py
ros/: README.md  bag-view.tmuxinator.yml  calibrate_turn.sh  calibrate_turn_fit.py  colcon-build.sh  dev-shell.sh  ekf-demo.tmuxinator.yml  ekf_traj_logger.py  elevation-demo-local.tmuxinator.yml  elevation-demo.tmuxinator.yml  inspect_cloud.py  record_bag.sh  record_drive.sh  record_planning.sh  rviz.sh  terrain-demo.tmuxinator.yml  traj_logger.py
ros/helhest_stack_ros/: README.md  package.xml  setup.cfg  setup.py
ros/terrain_toolkit_ros/: README.md  package.xml  setup.py
scripts/: benchmark.py  benchmark_icp.py  demo_dynamic_filter.py  demo_lidar.py  drive_lidar.py  example.py  profile_pipeline.py  render_dasenka.sh  stress_deskew.py  stress_icp_odom.py  viz_occlusion.py
src/helhest/: dynamics.py  heightmap.py
tests/: test_sensor.py
warp_engine/: implicit.py  kinematics.py  terrain.py
(+162 files in other folders)
