[project]
name = "motion-toolkit"
version = "0.1.0"
description = "Fast differentiable kinematic simulator + sampling planner for a skid-steer robot on heightmaps (NVIDIA Warp)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
    "warp-lang>=1.13",
]

[project.optional-dependencies]
# Interactive viewers (viz/) + figure/GIF export.
viz = ["matplotlib>=3.8", "glfw>=2.6", "PyOpenGL>=3.1", "pillow>=10.0"]
# Rosbag loading for calibration / eval (data.py).
data = ["h5py>=3.0"]
# Real perception source (terrain_toolkit) for on-robot maps.
perception = ["terrain-toolkit"]

[tool.uv.sources]
terrain-toolkit = { path = "../terrain_toolkit", editable = true }

[tool.black]
line-length = 100
target-version = ["py312"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kinematic_helhest"]

[dependency-groups]
dev = ["matplotlib>=3.8", "pillow>=10.0", "h5py>=3.0"]
