[project]
name = "terrain-toolkit"
version = "0.1.0"
description = "GPU-accelerated point cloud -> heightmap -> traversability cost map for mobile robots (NVIDIA Warp)."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.4",
    "warp-lang>=1.12.1",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/terrain_toolkit"]

[dependency-groups]
dev = [
    "matplotlib>=3.10.8",
    "plotly>=6.7.0",
]
